test/expected/explain_cmo_less_eq_greater_rck_i++default.out
struct S; explain int operator<=>(const S&) const = default
         ^
10: error: operator <=> must return one of auto, std::partial_ordering, std::strong_ordering, or std::weak_ordering
